fixed dark mode

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -199,7 +199,7 @@
       border-radius: 10px;
     }
     .background-lightgray{
-      background-color: red;
+      background-color: rgb(255, 255, 255);
     }
 
 }
@@ -291,7 +291,7 @@ body[color-theme="dark"] {
     stroke: #9696ab;
   }
   .background-lightgray{
-    background-color: rgb(84, 10, 255);
+    background-color: rgb(32, 32, 32);
   }
 }
 
